[gd_scene load_steps=6 format=3 uid="uid://bexj4r1gg6272"]

[ext_resource type="Script" path="res://systems/menu/main_menu.gd" id="1_6wjab"]
[ext_resource type="Texture2D" uid="uid://bq1csy5xctxef" path="res://assets/textures/background_menu.png" id="2_4jyu3"]
[ext_resource type="PackedScene" uid="uid://c1y34wps60rti" path="res://systems/menu/options menu/options_menu.tscn" id="3_80d8g"]

[sub_resource type="SystemFont" id="SystemFont_fqnpc"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_v2rwy"]
font_names = PackedStringArray("Impact")

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6wjab")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4jyu3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.431373, 0.176471, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_fqnpc")
theme_override_font_sizes/font_size = 64
text = "PIRATE GAME
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Start_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_v2rwy")
theme_override_font_sizes/font_size = 24
text = "НАЧАТЬ"

[node name="Options_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_v2rwy")
theme_override_font_sizes/font_size = 24
text = "НАСТРОЙКИ
"

[node name="End_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_v2rwy")
theme_override_font_sizes/font_size = 24
text = "ВЫХОД
"

[node name="Options_Menu" parent="." instance=ExtResource("3_80d8g")]
visible = false
layout_mode = 1
